TAB-3201 Get functional tests working by bumping Selenium versions, moving to Firefox 24 mode in HttpUnit and disabling jQuery animations where appropriate