@@ -35,7 +35,7 @@
 		<org.apache.poi.version>3.8</org.apache.poi.version>
 		<org.apache.tiles.version>3.0.5</org.apache.tiles.version>
 		<warwickutils.version>20150128</warwickutils.version>
-		<surefire.version>2.14.1</surefire.version>
+		<surefire.version>2.18.1</surefire.version>
 		<recompileMode><!-- incremental --></recompileMode>
 
 		<tabula.basedir>${project.basedir}</tabula.basedir>
@@ -556,7 +556,6 @@
 					<jvmArgs>
 						<jvmArg>-Xms256m</jvmArg>
 						<jvmArg>-Xmx2048m</jvmArg>
-						<jvmArg>-XX:MaxPermSize=512m</jvmArg>
 					</jvmArgs>
 					<args>
 						<arg>-deprecation</arg>
@@ -732,7 +731,7 @@
 					<artifactId>maven-surefire-plugin</artifactId>
 					<version>${surefire.version}</version>
 					<configuration>
-						<argLine>-Xmx2048m -Xms256m -XX:PermSize=128m -XX:MaxPermSize=512m</argLine>
+						<argLine>-Xmx2048m -Xms256m</argLine>
 						<forkCount>0.75C</forkCount>
 						<!--<runOrder>random</runOrder>-->
 						<systemPropertyVariables>
